--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">easy web maker</a></section><section class="header6 cid-qL9RWHYpVc mbr-fullscreen" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header6-h">
+<section class="engine"><a href="https://mobirise.ws/a">best free site builder</a></section><section class="header6 cid-qL9RWHYpVc mbr-fullscreen" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header6-h">
 
     
 
@@ -257,7 +257,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <img src="assets/images/01.jpg" alt="Mobirise">
+                        <img src="assets/images/twitch-1-1024x600.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -271,7 +271,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <img src="assets/images/02.jpg" alt="Mobirise">
+                        <a href="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1333884.RQQaXj.367cb906-7c27-4d10-a3a5-5b60299c6572.png"><img src="assets/images/randomquote-1-1024x600.png" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">Random Quote Generator</h4>
@@ -285,7 +285,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <img src="assets/images/03.jpg" alt="Mobirise">
+                        <img src="assets/images/pomodoro-1024x600.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -301,7 +301,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <img src="assets/images/01.jpg" alt="Mobirise">
+                        <img src="assets/images/tictactoe-1024x600.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -329,7 +329,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <img src="assets/images/013.jpg" alt="Mobirise">
+                        <img src="assets/images/calc-1024x600.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -344,7 +344,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <img src="assets/images/024.jpg" alt="Mobirise">
+                        <img src="assets/images/weather-1024x600.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -360,7 +360,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <img src="assets/images/035.jpg" alt="Mobirise">
+                        <img src="assets/images/wiki-1024x600.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -375,7 +375,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <img src="assets/images/013.jpg" alt="Mobirise">
+                        <img src="assets/images/simon-1024x600.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -603,7 +603,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gilOEVFm4zRciLQJ5Km2F/SgyN9TGhheXwbZGwlbpKkNNMdX9LmVyR8WaXPVRZ1C+6dJiXRcseAdhMFOg/JHxhN892s8jPbgzYQ8M8GPy/v2DlU4fLIqyLjNIvLP5ibV" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="c/FoZm86c2WOlDUDk7wtT6MQkvRukcjl1gNB+nMcR6BASSIIqSt4YLoXslfVIAVu5tRNgWpyMcObBucFurmVAPGVrR+3ixZ+BBGpQlU7RQY0yZqRwQGhv+TP+nLsQ3Pq" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
