--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/a">best free site builder</a></section><section class="header6 cid-qL9RWHYpVc mbr-fullscreen" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header6-h">
+<section class="engine"><a href="https://mobirise.ws/h">make own website</a></section><section class="header6 cid-qL9RWHYpVc mbr-fullscreen" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header6-h">
 
     
 
@@ -256,8 +256,8 @@
                 <div class="card-wrapper ">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <img src="assets/images/twitch-1-1024x600.png" alt="Mobirise" title="">
+                        <div class="mbr-section-btn text-center"><a href="https://codepen.io/WhatsThatWithMatt/pen/xXOGzO" class="btn btn-primary display-4" target="_blank">View</a></div>
+                        <a href="https://codepen.io/WhatsThatWithMatt/pen/xXOGzO" target="_blank"><img src="assets/images/twitch-1-1024x600.png" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -270,8 +270,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <a href="https://s3-us-west-2.amazonaws.com/i.cdpn.io/1333884.RQQaXj.367cb906-7c27-4d10-a3a5-5b60299c6572.png"><img src="assets/images/randomquote-1-1024x600.png" alt="Mobirise" title=""></a>
+                        <div class="mbr-section-btn text-center"><a href="https://codepen.io/WhatsThatWithMatt/pen/RQQaXj" class="btn btn-primary display-4" target="_blank">View</a></div>
+                        <a href="https://codepen.io/WhatsThatWithMatt/pen/RQQaXj" target="_blank"><img src="assets/images/randomquote-1-1024x600.png" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">Random Quote Generator</h4>
@@ -284,8 +284,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <img src="assets/images/pomodoro-1024x600.png" alt="Mobirise" title="">
+                        <div class="mbr-section-btn text-center"><a href="https://codepen.io/WhatsThatWithMatt/pen/qpKqxX" class="btn btn-primary display-4" target="_blank">View</a></div>
+                        <a href="https://codepen.io/WhatsThatWithMatt/pen/qpKqxX" target="_blank"><img src="assets/images/pomodoro-1024x600.png" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -300,8 +300,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <img src="assets/images/tictactoe-1024x600.png" alt="Mobirise" title="">
+                        <div class="mbr-section-btn text-center"><a href="https://codepen.io/WhatsThatWithMatt/pen/mpoZqe" class="btn btn-primary display-4" target="_blank">View</a></div>
+                        <a href="https://codepen.io/WhatsThatWithMatt/pen/mpoZqe" target="_blank"><img src="assets/images/tictactoe-1024x600.png" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -328,8 +328,8 @@
                 <div class="card-wrapper ">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <img src="assets/images/calc-1024x600.png" alt="Mobirise" title="">
+                        <div class="mbr-section-btn text-center"><a href="https://codepen.io/WhatsThatWithMatt/pen/dJppQq" class="btn btn-primary display-4" target="_blank">View</a></div>
+                        <a href="https://codepen.io/WhatsThatWithMatt/pen/dJppQq" target="_blank"><img src="assets/images/calc-1024x600.png" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -343,8 +343,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <img src="assets/images/weather-1024x600.png" alt="Mobirise" title="">
+                        <div class="mbr-section-btn text-center"><a href="https://codepen.io/WhatsThatWithMatt/pen/JyZzjJ" class="btn btn-primary display-4" target="_blank">View</a></div>
+                        <a href="https://codepen.io/WhatsThatWithMatt/pen/JyZzjJ" target="_blank"><img src="assets/images/weather-1024x600.png" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -359,8 +359,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <img src="assets/images/wiki-1024x600.png" alt="Mobirise" title="">
+                        <div class="mbr-section-btn text-center"><a href="https://codepen.io/WhatsThatWithMatt/pen/jLXbXQ" class="btn btn-primary display-4" target="_blank">View</a></div>
+                        <a href="https://codepen.io/WhatsThatWithMatt/pen/jLXbXQ" target="_blank"><img src="assets/images/wiki-1024x600.png" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -374,8 +374,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-primary display-4">View</a></div>
-                        <img src="assets/images/simon-1024x600.png" alt="Mobirise" title="">
+                        <div class="mbr-section-btn text-center"><a href="https://codepen.io/WhatsThatWithMatt/pen/zRNwwy" class="btn btn-primary display-4" target="_blank">View</a></div>
+                        <a href="https://codepen.io/WhatsThatWithMatt/pen/zRNwwy" target="_blank"><img src="assets/images/simon-1024x600.png" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -603,7 +603,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="c/FoZm86c2WOlDUDk7wtT6MQkvRukcjl1gNB+nMcR6BASSIIqSt4YLoXslfVIAVu5tRNgWpyMcObBucFurmVAPGVrR+3ixZ+BBGpQlU7RQY0yZqRwQGhv+TP+nLsQ3Pq" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EjqVXvdi1vllSdDiaiB9lDI2nA4B4cjaKTOYxdAuDSn/pzcxbfDMrXZf6ss2N6ndCgK8vQG19Kh+GVo8MwpCLNe2cuUPr4IHJJNSHisMX7T3SdQcQOx84v868Gu2HwmS" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
