--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">make own website</a></section><section class="header6 cid-qL9RWHYpVc mbr-fullscreen" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header6-h">
+<section class="engine"><a href="https://mobirise.ws/f">easy web creator</a></section><section class="header6 cid-qL9RWHYpVc mbr-fullscreen" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header6-h">
 
     
 
@@ -402,7 +402,7 @@
         <div class="row pt-5 mt-5">
             <div class="col-md-6 text-elements">
                 <h4 class="section-content-title pb-3 align-left mbr-fonts-style display-5">SKILL PROGRESSION</h4>
-                <p class="section-content-text align-left mbr-fonts-style display-7">Starting with the fundamentals of front end web development, I aim to build my knowledge in programming languages and apply them to personal and professional projects. My current goal is to increase my understanding of SQL and create web applications with React and Angular.<br><br>
+                <p class="section-content-text align-left mbr-fonts-style display-7">Starting with the fundamentals of front end web development, I aim to build my knowledge in programming languages and apply them to personal and professional projects. My current goal is to increase my understanding of SQL and create web applications with React, Angular, and Python.<br><br>
                 </p>
             </div>
             <div class="progress_elements col-md-6">
@@ -603,7 +603,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EjqVXvdi1vllSdDiaiB9lDI2nA4B4cjaKTOYxdAuDSn/pzcxbfDMrXZf6ss2N6ndCgK8vQG19Kh+GVo8MwpCLNe2cuUPr4IHJJNSHisMX7T3SdQcQOx84v868Gu2HwmS" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gmnzgquCuosDgIm1EX/p6tK5UuIttlGhBpsYIdK2iyKGGSOCGWDePHlw7OSryYJ3UD6/gRJZEbcSSV2AugCUbiqdxsQl92MI1rd5ziiTtcW1oi3U0DiiyI5xCmMqsHxj" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
